syntax = "proto3";

package proto;

import "skylb/dashboard/proto/data.proto";

// Request to login the user.
message LoginRequest {
	string login_name = 1;
	string password   = 2;
}

// Response for user login.
message LoginResponse {
	string error_msg = 1;
}

// Request to get users.
message GetUsersRequest {
}

// Response to get users.
message GetUsersResponse {
	string error_msg = 1;

	repeated UserInfo users = 2;
}

// Request to get the current user.
message GetCurrentUserRequest {
}

// Response to get the current users.
message GetCurrentUserResponse {
	string error_msg = 1;

	UserInfo user = 2;
}

// Request to update/insert users.
message UpsertUserRequest {
	UserInfo user = 1;
	bool is_new   = 2;
}

// Response to update/insert users.
message UpsertUserResponse {
	string error_msg = 1;
}

// Request to get all services.
message GetAllServicesRequest {
}

// Response to get all services.
message GetAllServicesResponse {
	string error_msg = 1;

	repeated ServiceInfo services = 2;
}

// Request to get service by Id.
message GetServiceByIdRequest {
	int32 id    = 1;
	int32 depth = 2;
}

// Response to get service by Id.
message GetServiceByIdResponse {
	string error_msg = 1;

	ServiceInfo service = 2;
}

// Request to add instance.
message AddInstanceRequest {
	int32  id      = 1;
	string address = 2;
}

// Response to add instance.
message AddInstanceResponse {
	string error_msg = 1;
}

// Request to toggle lameduck.
message ToggleLameduckRequest {
	int32  id       = 1;
	string address  = 2;
	bool   lameduck = 3;
}

// Response to toggle lameduck.
message ToggleLameduckResponse {
	string error_msg = 1;
}

// Request to get logs.
message GetLogsRequest {
	string operator   = 1;
	int32  service_id = 2;
	int64  start      = 3;
	int64  end        = 4;
}

// Response to get all services.
message GetLogsResponse {
	string error_msg = 1;

	string operator   = 2;
	int32  service_id = 3;
	int64  start      = 4;
	int64  end        = 5;

	repeated LogInfo logs = 6;
}
